--- a/bibliography.bib
+++ b/bibliography.bib
@@ -206,6 +206,14 @@
   year={2008}
 }
 
+@article{ben2009yaml,
+  title={Yaml ain't markup language (yaml™) version 1.1},
+  author={Ben-Kiki, Oren and Evans, Clark and Ingerson, Brian},
+  journal={Working Draft 2008-05},
+  volume={11},
+  year={2009}
+}
+
 @misc{openapi2020github,
   title={{OpenAPI Specification}},
   year={2020},
