Add abstract in slovak and acknowledgments

--- a/main.tex
+++ b/main.tex
@@ -128,8 +128,9 @@ Supervisor: & \mfskolitel \\
 ~
 
 \vfill
-{\bf Acknowledgments:} I want to thank me for trying to do more rights than
-wrong, I want to thank me for just being me at all times.
+{\bf Acknowledgments:} I would like to thank my supervisor Peter Gasper for his mentoring, consultations, insightful knowledge and encouragement in times, when my motivation was plummeting.
+
+I want to thank me for trying to do more rights than wrong, I want to thank me for just being me at all times.
 
 % --- Koniec poďakovania
 
@@ -139,7 +140,8 @@ wrong, I want to thank me for just being me at all times.
 \newpage
 \section*{Abstrakt}
 
-Here I'll write an abstract in Slovak.
+V tejto práci sme sa venovali fuzzovaniu webových aplikacií. Zamerali sme sa najmä na techniku automatizovaného black-box fuzzovania. Na automatický prieskum štruktúry webových aplikacií, sme použili OpenAPI špecifikáciu. Potom ako sme boli schopný zistiť štruktúru webových aplikacií sme navrhly a zostrojili generation-based smart fuzzer, ktorý je vie vytvarať HTTP requesty spĺňajúce OpenAPI špecifikáciu. Vďaka týmto vlastnostiam OpenAPI Fuzzer dosahuje veľký code coverage a podarilo sa nám nájsť chyby v celosvetovo používaných webových aplikaciách ako napríklad Kubernetes, Gitea či Vault.
+
 
 \paragraph*{Kľúčové slová:} fuzzing, OpenAPI, black-box, fuzzer, generation-based
 % --- Koniec Abstrakt - Slovensky
