--- a/introduction.tex
+++ b/introduction.tex
@@ -1,5 +1,5 @@
 \chapter{Introduction}
-The need for providing production-grade quality software was there from the inception of software engineering. The most effective way to ensure the quality of software proved to be testing. Throughout the history of computer science, software engineers and architects came up with different testing methods and techniques. Nonetheless, the manual way of writing tests was demonstrated to be insufficient and therefore random walk testing - fuzzing was invented \cite{miller1990empirical}.
+The need for providing production-grade quality software was there from the inception of software engineering. The most effective way to ensure the quality of software proved to be testing. Throughout the history of computer science, software engineers and architects came up with different testing methods and techniques. Nonetheless, the manual way of writing tests proved insufficient, and therefore random walk testing - fuzzing was invented \cite{miller1990empirical}.
 
 However, as more and more applications moved from personal computers to the web, a new challenge arose. Engineers needed to find a way to effectively fuzz the web applications. Our focus was primarily on this aspect of the fuzzing. Mainly on how to automate the fuzzing and how to do it efficiently.
 
