--- a/analysis-of-exiting-work.tex
+++ b/analysis-of-exiting-work.tex
@@ -4,17 +4,17 @@ In this chapter, we will discuss and compare the existing fuzzers that focus on 
 \section{apiFuzz}
 The first fuzzer we will talk about is the apiFuzz \cite{apiFuzz2020github}. It fuzzes a single HTTP request. The fuzzer accepts the input in form of \texttt{curl} command. It extracts headers, authentication, query parameters, body, path, and URL by parsing the \texttt{curl} command line arguments.
 
-It assumes that the request body is in a JSON format and starts the mutation of the individual key and value fields in the JSON body. By mutating also the keys of the JSON payload it breaks the grammar rules for the input. This will cause, that most of the found bugs will be in the JSON parser code. Locating a bug in the JSON parser code has the advantage that multiple services might be using the same JSON library and therefore there is a high probability that the bug will occur there as well. On the other hand, by breaking the grammar rules most requests will not pass the JSON parser and therefore will not able to trigger some unexpected behavior of the application logic. Thus dramatically decreasing the code coverage.
+It assumes that the request body is in a JSON format and starts the mutation of the individual key and value fields in the JSON body. By mutating also the keys of the JSON payload, it breaks the grammar rules for the input. This will cause, that most of the found bugs will be in the JSON parser code. Locating a bug in the JSON parser code has the advantage that multiple services might be using the same JSON library, and therefore there is a high probability that the bug will occur there as well. On the other hand, by breaking the grammar rules, most requests will not pass the JSON parser, and therefore will not able to trigger some unexpected behavior of the application logic. Thus dramatically decreasing the code coverage.
 
 We may say that apiFuzz is a smart fuzzer as it is able to determine the structure as well as the types of input data from the parsed \texttt{curl} command line arguments. However, it is limited by the data provided by the \texttt{curl} command. For instance, when the endpoint is able to accept Additional JSON fields that were not included in the \texttt{curl} command, the apiFuzz will not fuzz them.
 
-Finally, the apiFuzz is not aware of the internal structure of the fuzzed program. As a result, it is able to fuzz targets without having the access to the target's source code or even a binary. Additionally, since apiFuzz fuzzes a single request to a single endpoint it is improbable to change the state of the web service. For instance, if it would fuzz one endpoint that creates some object and another one that retrieves the object, the result of the second request might be affected by the first one. The combination of statelessness with the black-box technique makes the parallelization trivial and apiFuzz takes advantage of it. As for the error reporting technique, apiFuzz checks if HTTP response status code is equal to 500 and logs the input if it is.
+Finally, the apiFuzz is not aware of the internal structure of the fuzzed program. As a result, it can fuzz targets without having the access to the target's source code or even a binary. Additionally, since apiFuzz fuzzes a single request to a single endpoint, it is improbable to change the state of the web service. For instance, if it would fuzz one endpoint that creates some object and another one that retrieves the object, the result of the second request might be affected by the first one. The combination of statelessness with the black-box technique makes the parallelization trivial, and apiFuzz takes advantage of it. As for the error reporting technique, apiFuzz checks if the HTTP response status code is equal to 500 and logs the input if it is.
 
 \section{TnT-Fuzz}
 \label{sec:tnt-fuzz}
-The next fuzzer we will describe is TnT-Fuzz \cite{tntFuzzer2020github}. One could think of  TnT-Fuzz as an apiFuzz scaled up. While apiFuzz fuzzes single endpoint, TnT-Fuzz fuzzes all of them. Moreover, it automates the exploration of different endpoints by parsing the OpenAPI specification. From the specification, it also gets the correct input types as well as where in the request they should be placed. For example, in request headers, body od URL query parameters.
+The next fuzzer we will describe is TnT-Fuzz \cite{tntFuzzer2020github}. One could think of  TnT-Fuzz as an apiFuzz scaled up. While apiFuzz fuzzes single endpoint, TnT-Fuzz fuzzes all of them. Moreover, it automates the exploration of different endpoints by parsing the OpenAPI specification. From the specification, it also gets the correct input types as well as where in the request they should be placed. For example, in request headers, body, or URL query parameters.
 
-Nevertheless, a slight difference from apiFuzz can be seen when it comes to input creation. TnT-Fuzz will create the payload in two steps. First, it will generate random input of the correct type. Then, if the request body is in JSON format, it will mutate the whole JSON structure too. TnT-Fuzz uses PyJFuzz fuzzing framework for fuzzing JSON inputs \cite{pyjfuzz2020github}. A worth mentioning fact is that apiFuzz uses the PyJFuzz fuzzing framework as well. Hence we can foresee that TnT-Fuzz will behave rather equivalently as apiFuzz. It as well augments the JSON keys and therefore fuzzes the JSON parser rather than the business logic of the web service. Moreover, the grammar rules are broken one more time - when the input type is JSON object, which is most of the cases. Then TnT-Fuzz will not parse the whole structure of the JSON object but generate a random one instead.
+Nevertheless, a slight difference from apiFuzz can be seen when it comes to input creation. TnT-Fuzz will create the payload in two steps. First, it will generate random input of the correct type. Then, if the request body is in JSON format, it will mutate the whole JSON structure. TnT-Fuzz uses PyJFuzz fuzzing framework for fuzzing JSON inputs \cite{pyjfuzz2020github}. A worth mentioning fact is that apiFuzz uses the PyJFuzz fuzzing framework as well. Hence we can foresee that TnT-Fuzz will behave rather equivalently as apiFuzz. It as well augments the JSON keys and therefore fuzzes the JSON parser rather than the business logic of the web service. Moreover, the grammar rules are broken one more time - when the input type is JSON object, which is most of the cases. Then TnT-Fuzz will not parse the whole structure of the JSON object but generate a random one instead.
 
 Unfortunately, when we were trying to test the TnT-Fuzz we came across several issues. The first one is that it takes the OpenAPI specification from the URL of the web service (e.g. \texttt{http://localhost:2999/api/swagger.json}), however, some services like HashiCorp Vault \cite{vault2020github} provide the specification for authorized users only. This obstacle can be circumvented by supplying an API token for authorization, nevertheless, that means that TnT-Fuzz will run as an authorized user during the whole fuzzing session, which might not be desired. The next issue we came across was during the fuzzing of self-hosted git service \cite{gitea2020web}. TnT-Fuzz was not able to parse the specification and raised an exception.
 
@@ -25,9 +25,9 @@ At last, let us have a look at error reporting. TnT-Fuzz will log every request 
 \label{sec:restler}
 The last fuzzer we will take a look at is called RESTler developed by the Microsoft Research team \cite{atlidakis2019restler}. As RESTler's research paper states, the main asset of RESTler is statefulness. Moreover, it claims to be the first stateful REST API fuzzer. Before we proceed with an exploration of its numerous features, let us look into what statefulness means in the context of API fuzzers.
 
-Nearly every service holds some internal state, mainly in form of a database. Making a request to the API may change the state. For example, \texttt{POST} request will create and \texttt{PUT} request will update an item in the database. Knowing whether an item exists is crucial if the most efficient usage of resources is desired. Request that queries an item that was not created yet is essentially useless. The API will most probably respond with status code signaling user error - \texttt{Not Found}. This kind of request only wasted valuable resources.
+Nearly every service holds some internal state, mainly in form of a database. Making a request to the API may change the state. For example, \texttt{POST} request will create and \texttt{PUT} request will update an item in the database. Knowing whether an item exists is crucial if the most efficient usage of resources is desired. Request that queries an item that was not created yet is essentially useless. The API will most probably respond with status code signaling user error - \texttt{404 - Not Found}. This kind of request only wasted valuable resources.
 
-To minimize meaningless requests RESTler infers producer-consumer dependencies among request types. e.g sending request \texttt{A} makes sense only if request \texttt{B} was sent before. RESTler is able to infer those dependencies by examining swagger specification (OpenAPI v2) of fuzzed service. Then it performs a breadth-first search to create a valid sequence of requests with satisfied dependencies. The successful request is denoted by receiving an HTTP status code in the 200 range. When the sequence is not successful - status code in range 400 is received, RESTler will not add that request to the sequence chain. However, requests frequently take some input. The input might be in form of a request body, URL query parameters, headers or cookies. Therefore response from a single endpoint differs when we send a different input to it. To solve this issue RESTler maintains a \textit{fuzzing dictionary}. \textit{A fuzzing dictionary} typically consists of sample values for every fuzzable type. For instance, string type values may have include \texttt{""} (empty string) or \texttt{"somestring"}. Integer types, on the other hand, may include \texttt{0} and \texttt{1}. However, RESTler needs to keep the aforementioned \textit{fuzzing dictionary} rather small since with the size of the dictionary the complexity of the graph increases as well. One notable disadvantage of the breadth-first search (\texttt{BFS}) strategy is the lack of randomness that is caused by a small dictionary size.
+To minimize meaningless requests, RESTler infers producer-consumer dependencies among request types. e.g sending request \texttt{A} makes sense only if request \texttt{B} was sent before. RESTler is able to infer those dependencies by examining swagger specification (OpenAPI v2) of fuzzed service. Then it performs a breadth-first search to create a valid sequence of requests with satisfied dependencies. The successful request is denoted by receiving an HTTP status code in the 200 range. When the sequence is not successful - status code in range 400 is received, RESTler will not add that request to the sequence chain. However, requests frequently take some input. The input might be in form of a request body, URL query parameters, headers or cookies. Therefore, response from a single endpoint differs when we send a different input to it. To solve this issue RESTler maintains a \textit{fuzzing dictionary}. \textit{A fuzzing dictionary} typically consists of sample values for every fuzzable type. For instance, string type values may have include \texttt{""} (empty string) or \texttt{"somestring"}. Integer types, on the other hand, may include \texttt{0} and \texttt{1}. However, RESTler needs to keep the aforementioned \textit{fuzzing dictionary} rather small since with the size of the dictionary the complexity of the graph increases as well. One notable disadvantage of the breadth-first search (\texttt{BFS}) strategy is the lack of randomness that is caused by a small dictionary size.
 
 In addition to \texttt{BFS} strategy, the Microsoft Research team incorporated random walk strategy to the RESTler as well. This strategy has weaker requirements on the choice of requests. RESTler still makes the dynamic analysis of requirements for each request. Meaning that it will add a request to a request sequence only when all dependencies are satisfied. Nevertheless, it will not send them and check the response code to verify that the request sequence is indeed valid.
 
@@ -56,7 +56,7 @@ automates API exploration     & no         & yes        & yes        \\
 \end{center}
 \end{table}
 
-As we are able to see, API fuzzers have numerous similarities. One of which we have not mentioned yet is a language of implementation. All above-mentioned fuzzers are implemented in \texttt{Python} programing language. \texttt{Python} is a high-level multiparadigm dynamic scripting language. Due to its dynamic nature \texttt{Python} comes especially useful when generating random and unstructured data. Moreover, \texttt{Python} offers a large variety of community-developed modules, for instance \texttt{requests} module including \texttt{HTTP} client for sending requests.
+As we are able to see, API fuzzers have numerous similarities. One of which we have not mentioned yet is a language of implementation. All above-mentioned fuzzers are implemented in Python programing language. Python is a high-level multiparadigm dynamic scripting language. Due to its dynamic nature Python comes especially useful when generating random and unstructured data. Moreover, Python offers a large variety of community-developed modules, for instance \texttt{requests} module including \texttt{HTTP} client for sending requests.
 
 \paragraph{}
 As we can see in the table \ref{table:fuzzers-comparison} every discussed fuzzer was using a back-box fuzzing technique. The prevalence of this technique is understandable as their frequent goal is reusability. Moreover, it is rather difficult to monitor a binary without having an access to it, which might be the case with web services. We may also observe that more advanced fuzzers like RESTler and TnT-Fuzz are using an automation techniques to inspect the API and find the endpoint that they will subsequently fuzz.
