--- a/architecture-of-out-fuzzer.tex
+++ b/architecture-of-out-fuzzer.tex
@@ -1,11 +1,11 @@
 \chapter{Architecture of OpenAPI Fuzzer}
-As we can see, more and more people are interacting with services and applications through the web interface, fuzzing of web services is becoming more instrumental than ever. In the previous chapters, we have went through and gained a better understanding of the existing state-of-the-art work. Now, we can think of what to do differently and how to improve on it. In this chapter, we will discuss design decision we made when creating the fuzzer.
+As we can see, more and more people interact with services and applications through the web interface. Thus, the fuzzing of web services is becoming more instrumental than ever. In the previous chapters, we have gone through and gained a better understanding of the existing state-of-the-art work. Now, we can think of what to do differently and how to improve on it. In this chapter, we will discuss the design decision we made when creating the fuzzer.
 
 \section{Taxonomy of our fuzzer}
-Before we dive into more details, let us categorize our fuzzer into the standard categories used in the context of fuzzing. These categories include input creation technique, the knowledge of the structure of input data as well as whether the fuzzer is aware of the internal structure of the fuzzed program.
+Before we dive into more details, let us categorize our fuzzer into the standard categories used in the context of fuzzing. These categories include input creation technique, the knowledge of the structure of input data, as well as whether the fuzzer is aware of the internal structure of the fuzzed program.
 
 \subsection{Black-box}
-Reusability is essential for us when creating the fuzzer. We want to out fuzzer to be able to fuzz as many services as possible with the fewest modifications as possible. Therefore, we decided to implement a fuzzer that does not need to be aware of the internal structure of the fuzzed program - a black-box fuzzer. Moreover, a combination of black-box fuzzer and web service as a target gives us a compelling property. We are able to fuzz a software without having an access to its source or even binary format. This property can be widely used in offensive security, where it is not possible to perform some kind of static or dynamic analysis on the target service.
+Reusability is essential for us when creating the fuzzer. We want our fuzzer to be able to fuzz as many services as possible with the fewest modifications as possible. Therefore, we decided to implement a fuzzer that does not need to be aware of the internal structure of the fuzzed program - a black-box fuzzer. Moreover, a combination of black-box fuzzer and web service as a target gives us a compelling property. We are able to fuzz a software without having an access to its source or even binary format. This property can be widely used in offensive security, where it is not possible to perform some kind of static or dynamic analysis on the target service.
 
 \subsection{\textit{Smart}}
 When choosing between \textit{smart} and \textit{dumb} fuzzer, the \textit{smart} one is undoubtedly a better choice since it produces less input, which would be rejected right away by the input parser program. However to build a \textit{smart} fuzzer we need to know the structure of the input data. Web services do not follow any standard or specification per se, but they can be described by one - the OpenAPI specification. We have already had a look at the OpenAPI specification in section \ref{sec:openapi} and we know, that it indeed details the API precisely. Thus, we will take an advantage of it when designing our fuzzer.
@@ -55,18 +55,18 @@ In the figure \ref{fig:fuzzer-architecture} we can see a diagram of fuzzer archi
     \label{fig:fuzzer-architecture}
 \end{figure}
 
-Firstly, we decided to create an OpenAPI Fuzzer as a command-line program as it offers great granularity when it comes to configuration. Moreover, the target audience for the fuzzer are engineers that should not have any issue with command line interface (CLI).
+Firstly, we decided to create an OpenAPI Fuzzer as a command-line program as it offers great granularity when it comes to configuration. Moreover, the target audience for the fuzzer, are engineers that should not have any issue with the command-line interface (CLI).
 
-When it comes to retrieving the specification we chose to supply it as an argument instead of instructing the fuzzer to download it from the target, which was the case of TnT-Fuzz described in section \ref{sec:tnt-fuzz}. By supplying the specification separately we avoid scenarios where the authorization is needed to retrieve the specification and therefore, some kind of token needs to be provided to the fuzzer. Supplying the specification manually gives the user the ability to modify it, which is useful when the user does not want to fuzz certain endpoints. For instance, we might not want to send requests to logout endpoints when running the authorized session for obvious reasons. Moreover, some endpoints might be useless to fuzz as they perform minimal actions in the application, and thus we only waste resources when calling them. Those kinds of endpoints may include version or status endpoint. We also chose to use version 3 since it is gaining a wider adoption and version 2 is slowly being phased out. OpenAPI fuzzer is the only fuzzer we know of that uses OpenAPI specification version 3.
+When it comes to retrieving the specification we chose to supply it as an argument instead of instructing the fuzzer to download it from the target, which was the case of TnT-Fuzz described in section \ref{sec:tnt-fuzz}. By supplying the specification separately, we avoid scenarios where the authorization is needed to retrieve the specification, and therefore, some kind of token needs to be provided to the fuzzer. Supplying the specification manually gives the user the ability to modify it, which is useful when the user does not want to fuzz certain endpoints. For instance, we might not want to send requests to logout endpoints when running the authorized session for obvious reasons. Moreover, some endpoints might be useless to fuzz as they perform minimal actions in the application, and thus we only waste resources when calling them. Those kinds of endpoints may include version or status endpoint. We also chose to use version 3, since it is gaining a wider adoption and version 2 is slowly being phased out. OpenAPI fuzzer is the only fuzzer we know of that uses OpenAPI specification version 3.
 
 After successful parsing of OpenAPI specification, the fuzzer will find resources and create the input for requests. We agreed to follow the types and structure of the input fields which was not the case of apiFuzz \cite{apiFuzz2020github} and TnT-Fuzz \cite{tntFuzzer2020github}. Where the OpenAPI Fuzzer differs from the RESTler \cite{atlidakis2019restler} is in data randomness. Instead of a small \textit{fuzzing dictionary}, the OpenAPI fuzzer will generate data at random. Another feature worth mentioning is input data generation algorithm that creates random \textbf{unicode} strings. We have made this decision because Unicode is notoriously difficult to get right. A large number of programming languages store strings as an array of bytes. Indexing or slicing of such an array may result in buggy behavior. Moreover, the random input data generator can be seeded, which may help in the reproducibility of fuzzer's runs it the future.
 
-The next step after input data creation is sending of requests. We determined that it will be most beneficial to send the request synchronously for following reasons. Synchronous requests are in deterministic order which means that they can be resent in the same order and therefore make the same effects on the API. Thus determinism is crucial when implementing reproducible runs.
+The next step after input data creation is sending of requests. We determined that it will be most beneficial to send the request synchronously for the following reasons. Synchronous requests are in deterministic order, which means that they can be resent in the same order and therefore, make the same effects on the API. Thus determinism is crucial when implementing reproducible runs.
 % not dosing as well
 
-When requests are sent OpenAPI Fuzzer proceeds to determining which ones are the results of triggered bugs. OpenAPI fuzzer will mark a request as a bug when it receives a response with HTTP status code from a range of server errors (500). Likewise, behavior can be seen in apiFuzz and RESTler. However, OpenAPI Fuzzer takes advantage of the OpenAPI specification from a different angle. Since OpenAPI specification defines what response codes are to be expected from an endpoint, the OpenAPI fuzzer will report a bug when this condition is not met. Thus we are able to catch even more subtle bugs that other fuzzers would ignore.
+When requests are sent, the OpenAPI Fuzzer proceeds to determine which ones are the results of triggered bugs. OpenAPI fuzzer will mark a request as a bug when it receives a response with an HTTP status code from a range of server errors (500). Likewise, behavior can be seen in apiFuzz and RESTler. However, OpenAPI Fuzzer takes advantage of the OpenAPI specification from a different angle. Since OpenAPI specification defines what response codes are to be expected from an endpoint, the OpenAPI fuzzer will report a bug when this condition is not met. Thus we can catch even more subtle bugs that other fuzzers would ignore.
 
-Nonetheless, we found out that many APIs do not include all HTTP response codes that may be returned from an endpoint in the OpenAPI specification. After all, the specification does not state that all possible response codes MUST be defined \cite{openapi2020github}. Mostly the undefined response codes were from the client error range (400) and indeed were not the most interesting for us. Inevitably, we were receiving numerous false-positive results. For this reason, we designed a way to ignore certain status codes and our false positive rate decreased to the minimum.
+Nonetheless, we found out that many APIs do not include all HTTP response codes that may be returned from an endpoint in the OpenAPI specification. After all, the specification does not state that all possible response codes MUST be defined \cite{openapi2020github}. Mostly the undefined response codes were from the client error range (400) and indeed were not the most interesting for us. Inevitably, we were receiving numerous false-positive results. For this reason, we designed a way to ignore certain status codes, and our false positive rate decreased to the minimum.
 
 The last part of the fuzzer loop is error reporting and displaying progress. In a nutshell, we decided to follow a Unix philosophy and store the results in a way that they are able to be processed by other Unix commands. Further, the current state of the fuzzer is displayed in a terminal user interface (TUI) make the tracking of progress easier.
 
@@ -74,4 +74,4 @@ The last part of the fuzzer loop is error reporting and displaying progress. In 
 Triggering bugs is only one significant part of fuzzing. The other one is being able to reproduce it and report it. For this reason, we created a program called \newline \texttt{openapi-fuzzer-resender} that takes the report created by \texttt{openapi-fuzzer} and makes the request. Thanks to the resender user is able to trigger the bug after fuzzing is finished. The advantage is that the application logs are not cluttered by the stream of other requests and thus it is easier to gain more information about the bug from logs.
 
 \subsection{Authorization for better coverage}
-After several runs of the fuzzer, we found out that a large number of APIs have authorization and they will not even parse the payload if it is not provided, rendering out fuzzer useless in those situations. Hence we added an authorization option for the fuzzer. The authorization can be supplied in a form of HTTP headers meaning that basic authentication, API key authorization or authorization via the cookie is supported. We will conclude on the results and efficiency of authorized versus non-authorized runs in following chapters.
+After several runs of the fuzzer, we found out that a large number of APIs have authorization and they will not even parse the payload if it is not provided, rendering out fuzzer useless in those situations. Hence we added an authorization option for the fuzzer. The authorization can be supplied in a form of HTTP headers meaning that basic authentication, API key authorization, or authorization via the cookie is supported. We will conclude on the results and efficiency of authorized versus non-authorized runs in the following chapters.
