Add appendix with link to the fuzzer

--- a/main.tex
+++ b/main.tex
@@ -206,4 +206,6 @@ In this work, we researched techniques used for fuzzing web services. We paid at
 \bibliographystyle{plain}
 \bibliography{bibliography}
 
+\input appendix.tex
+
 \end{document}
