--- a/analysis-of-exiting-work.tex
+++ b/analysis-of-exiting-work.tex
@@ -47,7 +47,7 @@ As for the error reporting, RESTler works similar to the apiFuzz. It logs a bug 
 aware of internal structure   & black-box  & black-box  & black-box  \\
 aware of input data structure & semi-smart & semi-smart & smart      \\
 input generation technique    & mutation   & combined   & generation \\
-statefullness                 & stateless  & stateless  & statefull  \\
+statefulness                 & stateless  & stateless  & stateful  \\
 automates API exploration     & no         & yes        & yes        \\
 \hline
 \end{tabular}
