--- a/architecture-of-out-fuzzer.tex
+++ b/architecture-of-out-fuzzer.tex
@@ -34,7 +34,7 @@ To put OpenAPI Fuzzer into perspective with the fuzzer described in the previous
 aware of internal structure   & black-box  & black-box  & black-box  & black-box               \\
 aware of input data structure & semi-smart & semi-smart & smart      & smart                   \\
 input generation technique    & mutation   & combined   & generation & generation              \\
-statefullness                 & stateless  & stateless  & statefull  & stateless               \\
+statefulness                 & stateless  & stateless  & stateful  & stateless                 \\
 automates API exploration     & no         & yes        & yes        & yes                     \\
 \hline
 \end{tabular}
