--- a/main.tex
+++ b/main.tex
@@ -140,7 +140,7 @@ I want to thank me for trying to do more rights than wrong, I want to thank me f
 \newpage
 \section*{Abstrakt}
 
-V tejto práci sme sa venovali fuzzovaniu webových aplikacií. Zamerali sme sa najmä na techniku automatizovaného black-box fuzzovania. Na automatický prieskum štruktúry webových aplikacií sme využili OpenAPI špecifikáciu. Na základe tejto špecifikácie sme navrhli a zostrojili generation-based smart fuzzer, ktorý je posiela HTTP requesty spĺňajúce OpenAPI špecifikáciu. Vďaka týmto vlastnostiam OpenAPI Fuzzer dosahuje veľké pokrytie kódu a podarilo sa nám nájsť chyby v celosvetovo používaných webových aplikaciách ako napríklad Kubernetes, Gitea či Vault.
+V tejto práci sme sa venovali fuzzovaniu webových aplikacií. Zamerali sme sa najmä na techniku automatizovaného black-box fuzzovania. Na automatický prieskum štruktúry webových aplikacií sme využili OpenAPI špecifikáciu. Na základe tejto špecifikácie sme navrhli a zostrojili generation-based smart fuzzer, ktorý posiela HTTP requesty spĺňajúce OpenAPI špecifikáciu. Vďaka týmto vlastnostiam OpenAPI Fuzzer dosahuje veľké pokrytie kódu a podarilo sa nám nájsť chyby v celosvetovo používaných webových aplikaciách ako napríklad Kubernetes, Gitea či Vault.
 
 
 \paragraph*{Kľúčové slová:} fuzzing, OpenAPI, black-box, fuzzer, generation-based
