--- a/introduction-to-fuzzing.tex
+++ b/introduction-to-fuzzing.tex
@@ -10,7 +10,7 @@ Integration testing, on the other hand, does not run small units. It combines al
 \section{Why fuzzing}
 The above-mentioned testing methods, however, proved insufficient when Miller with his team was able to crash from 24\% to 33\% of nearly 90 Unix battle-tested utilities. They were generating random inputs and reporting the error if the program crashed or hanged. Miller described the fuzz testing strategy as a random walk through the state space of a program, represented by a state machine, searching for undefined states \cite{miller1990empirical}.
 
-Some of the most frequent bugs caught by fuzzers are buffer overflows, memory leaks, and formatting errors. These sorts of bugs may seem innocent and one might think that they will only crash the application. On the contrary, these bugs may lead to severe vulnerabilities such as heartbleed bug \cite{heartbleed2020bug} in widely used TLS implementation, which caused primary keys to leak and thus exposed the entire communication unencrypted. There is an example implementation of how to find the heartbleed vulnerability right in the ClusterFuzz documentation \cite{clusterfuzz2020heartbleed}.
+Some of the most frequent bugs caught by fuzzers are buffer overflows, memory leaks, and formatting errors. These sorts of bugs may seem innocent and one might think that they will only crash the application. On the contrary, these bugs may lead to severe vulnerabilities such as heartbleed bug \cite{heartbleed2020bug} in widely used TLS implementation, which caused private keys to leak and thus exposed the entire communication unencrypted. There is an example implementation of how to find the heartbleed vulnerability right in the ClusterFuzz documentation \cite{clusterfuzz2020heartbleed}.
 
 
 \section{Types of fuzzers}
